# parsely

./: .gitignore  Cargo.toml  README.md  a.out  context.ts  index.html  out.ts
examples/: main.c  main.s  out.s  specfile.toml  test.c  test.h  test.par  test.par.old  test1.par  testlexed.par
lib/: a.out  core.h  main.c
parsely/: Cargo.toml
parsely/src/: args.rs  main.rs
parsely_analysis/: Cargo.toml
parsely_analysis/src/: lib.rs
parsely_ast/: Cargo.toml
parsely_ast/src/: lib.rs  node_id.rs
parsely_diagnostics/: Cargo.toml
parsely_diagnostics/src/: lib.rs  token_cache.rs
parsely_gen/: Cargo.toml
parsely_gen/src/: expression.rs  item.rs  lib.rs  llvm_codegen.rs  llvm_value.rs  module.rs  path.rs  resolve.rs  statement.rs  symbols.rs  ty.rs  types.rs  visitor.rs
parsely_gen_asm/: Cargo.toml
parsely_gen_asm/src/: expression.rs  item.rs  lib.rs  module.rs  pack.rs  value.rs
parsely_gen_ts/: Cargo.toml
parsely_gen_ts/src/: diagnostics.rs  expression.rs  item.rs  lib.rs  module.rs
parsely_lexer/: Cargo.toml
parsely_lexer/src/: lib.rs  tokens.rs
parsely_lsp/: index.html  language-configuration.json  package-lock.json  package.json
parsely_lsp/client/src/: extension.ts
parsely_lsp/lsp_server/: Cargo.toml
parsely_lsp/lsp_server/src/: goto.rs  hover.rs  main.rs  semantic_tokens.rs  signature.rs
parsely_lsp/syntaxes/: xlang.tmLanguage.json
parsely_macros/: Cargo.toml
parsely_macros/src/: lib.rs
parsely_parser/: Cargo.toml
parsely_parser/src/: ast.rs  expr.rs  expression.rs  item.rs  lib.rs  program.rs  statement.rs  tokens.rs  types.rs  typess.rs
parsely_parser_failsafe/: Cargo.toml
parsely_parser_failsafe/src/: dummy.rs  expression.rs  item.rs  lib.rs  program.rs  tokens.rs  types.rs
