[package]
name = "parsely"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsely-lexer = { path = "../parsely_lexer" }
parsely-parser = { path = "../parsely_parser_failsafe" }
parsely-gen = { path = "../parsely_gen" }
parsely-diagnostics = { path = "../parsely_diagnostics" }

clap = { version = "4.3.21", features = ["derive"] }
