[package]
name = "parsely-diagnostics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsely-lexer = { path = "../parsely_lexer" }
# parsely-parser = { path = "../parsely_parser_failsafe" }
colored = "2.0.0"

[features]
no-color = ["colored/no-color"]
