[package]
name = "parsely-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsely-lexer = { path = "../parsely_lexer" }
parsely-parser = { path = "../parsely_parser" }
thiserror = "1.0.44"

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0", "llvm15-0-force-dynamic"] }
bitflags = "2.3.3"
colored = "2.0.4"
