[package]
name = "parsely-gen-asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsely-lexer = { path = "../parsely_lexer" }
# parsely-parser = { path = "../parsely_parser" }
parsely-parser = { path = "../parsely_parser_failsafe" }
parsely-diagnostics = { path = "../parsely_diagnostics" }

colored = "2.0.0"
toml = "0.7.6"
serde = { version = "1.0.185", features = ["derive"] }
