[package]
name = "parsely-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsely-lexer = { path = "../../parsely_lexer" }
# parsely-parser = { path = "../../parsely_parser" }
parsely-parser = { path = "../../parsely_parser" }
# parsely-gen-asm = { path = "../../parsely_gen_asm" }
# parsely-diagnostics = { path = "../../parsely_diagnostics", features = ["no-color"] }

tokio = { version = "1.24.2", features = ["full"] }
serde = "*"
serde_json = "*"
tower-lsp = "0.18.0"
log = "*"